      to the library and moved into the collection "Recent". In addition,
      the last read page will be stored and recalled the next time the book
      is opened again.

    - Fixed several malfunctions that could occur if no SQLite library
      was installed.

    - Fixed a bug that prevented MComix from showing the first page of an
      archive nested in other archives.

    - MComix now starts in RTL mode when a RTL language has been manually
      selected in the preference dialog.

    - Added an option to automatically rotate images if their height exceeds
      their width (or width exceeds height), located in the menu bar under
      Tools -> Transform image -> Auto-rotate image.

    - Added a new preference option to control sorting of files within
      archives. Natural sort order is the default ordering, which sorts
      numbers in file names based on their natural order (e.g. 1, 2, .., 10),
      while literal order will use standard C sorting (e.g. 1, 23, 4).

    - Updated traditional Chinese translation (by Wayne Su).

    - Updated Hebrew translation (by Isratine Citizen).

    - Updated Japanese translation (by Toshiharu Kudoh).

    - Updated Spanish translation (by Carlos Feliu).

    - Updated simplified Chinese translation (by Zach Cheung).

MComix 0.99
Release date: 14.07.2012

    - Fixed "Go to page" dialog's thumbnail not scaling depending on dialog
      size.

    - Using the mouse wheel to scroll left now correctly advances to the
      next page in manga mode, instead of going back one page. Scrolling right
      has also been fixed.

    - Multiple open instances of MComix no longer overwrite each others'
      bookmarks when closed.

    - Fixed exception when trying to pack an archive using the archive editor.

    - Fixed a bug that prevented using the "Next archive"/"Previous archive"
      buttons when an empty archive was loaded (by Gabriel Falcone).

    - "Smart scrolling" now also works with the mouse wheel. In smart